# heimdallsword

./: BUILD.md  CHANGELOG.md  LICENSE  Makefile  README.md  setup.cfg
docs/source/: build.rst  conf.py  index.rst  installation.rst  intro.rst  license.rst  pydocs.rst
heimdallsword/: __main__.py  release.py  status.py
heimdallsword/data/: config.py  metrics.py
heimdallsword/dispatcher/: client.py  orchestrator.py  subscriber.py
heimdallsword/graphics/: renderer.py
heimdallsword/log/: cli_log.py  handler.py
heimdallsword/models/: message.py  recipient.py  sender.py
heimdallsword/utils/: parser.py  util.py
resources/logo/: LICENSE  README.md  heimdallsword_logo.psd
tests/: run_test.sh  test_heimdallsword.py
tests/sample_data/recipient_test/: recipient_bad_email.txt  recipient_bad_format.txt  recipient_bad_key-value.txt  recipient_content_no_subject.txt  recipient_good.txt  recipient_no_message_file.txt
tests/sample_data/recipient_test/content/: msg_bad_content_subject.txt  msg_bad_content_type.txt  msg_bad_currency.txt  msg_bad_key.txt  msg_built_in_tags.txt  msg_html.txt  msg_plain.txt
tests/sample_data/sender_test/: sender_bad_email.txt  sender_bad_key-value.txt  sender_bad_password.txt  sender_bad_pop3_port.txt  sender_bad_smtp_port.txt  sender_good.txt  sender_no_emails.txt
