[metadata]
name = heimdallsword
version = 0.0.2
author = eldiablo
author_email = avsarria@gmail.com
description = A tool for sending emails to multiple recipients using one or multiple sender accounts with customizable email templates.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
platforms = any
keywords = tor, relay, network, ip, anonymity
url = http://github.com/rwprimitives/heimdallsword
project_urls = 
    Source = http://github.com/rwprimitives/tor-seeker
    Bug Tracker = https://github.com/rwprimitives/tor-seeker/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Customer Service
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Information Technology
    Intended Audience :: Other Audience
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    Operating System :: OS Independent
    Topic :: Communications
    Topic :: Communications :: Email
    Topic :: Communications :: Email :: Mailing List Servers
    Topic :: Communications :: Email :: Post-Office
    Topic :: Internet
    Topic :: Scientific/Engineering
    Topic :: System :: Networking
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: CPython


[options]
packages = find:
python_requires = >= 3.6


[options.entry_points]
console_scripts =
    heimdallsword = heimdallsword.__main__:main


[options.extras_require]
codestyle =
    flake8 >= 3, <4


[flake8]
max-line-length = 120
ignore =
    E303,   # too many blank lines
    E221    # ignore "multiple spaces before operator"
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist


[bdist_wheel]
universal = 1
